Fix .em-checkbox
A max-height was misplaced and not allowing long checkbox text.
Also, the margin-top was a bit too much for checkbox text.

--- a/src/emuxo-base.styl
+++ b/src/emuxo-base.styl
@@ -98,10 +98,10 @@ button.em-button-link
 
   > span
     display: inline-block
-    max-height: 2.2em
     vertical-align: top
 
   input[type="checkbox"] + span
+    max-height: 2.2em
     padding: 6px 12px 10px 12px
     border: solid 2px rgba(0, 0, 0, 0.1)
     border-radius: 5px
@@ -136,7 +136,7 @@ button.em-button-link
       cursor: not-allowed
 
   span:nth-child(3)
-    margin: 10px 0 0 10px
+    margin: 6px 0 0 10px
 
 // Selection
 
